Publish bower package

--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
   ],
   "license": "MIT",
   "homepage": "http://pannellum.org",
-  "private": true,
+  "private": false,
   "ignore": [
     "**/.*",
     "node_modules",
